bug-list-for-mayank-css aligning icons in bot article history

--- a/src/app/core/bot-detail/bot-article-history/bot-article-history.component.scss
+++ b/src/app/core/bot-detail/bot-article-history/bot-article-history.component.scss
@@ -23,6 +23,7 @@
             color :#4a4a4a;
           }
           display: flex;
+          align-items: center;
     }
     .table-dropdown .dropdown-content{
         right: 0% !important;
